<resources>
    <string name="app_name">Reader for Reddit</string>

    <plurals name="years_placeholder">
        <item quantity="one">%1$d year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>
    <plurals name="months_placeholder">
        <item quantity="one">%1$d month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>
    <plurals name="days_placeholder">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <plurals name="hours_placeholder">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>
    <plurals name="minutes_placeholder">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>

    <string name="just_now">Just now</string>
    <string name="link_author_subtitle">Posted by %1$s %2$s</string>
    <string name="score_hidden">[Score hidden]</string>
    <plurals name="comments">
        <item quantity="one">%1$s comment</item>
        <item quantity="other">%1$s comments</item>
    </plurals>
    <plurals name="points">
        <item quantity="one">%1$s point</item>
        <item quantity="other">%1$s points</item>
    </plurals>

    <plurals name="view_more">
        <item quantity="one">Load %1$d more reply</item>
        <item quantity="other">Load %1$d more replies</item>
    </plurals>

    <string name="children_hidden">%1$d hidden</string>

    <string name="frontpage">Frontpage</string>

    <string name="best">Best</string>
    <string name="hot">Hot</string>
    <string name="top">Top</string>
    <string name="new_sort">New</string>
    <string name="rising">Rising</string>
    <string name="controversial">Controversial</string>
    <string name="old">Old</string>
    <string name="q_and_a">Q&amp;A</string>

    <string name="past_hour">Past Hour</string>
    <string name="past_day">Past Day</string>
    <string name="past_week">Past Week</string>
    <string name="past_month">Past Month</string>
    <string name="past_year">Past Year</string>
    <string name="past_all">All Time</string>

    <string name="best_posts">Best Posts</string>
    <string name="hot_posts">Hot Posts</string>
    <string name="top_posts">Top Posts</string>
    <string name="new_posts">New Posts</string>
    <string name="rising_posts">Rising Posts</string>
    <string name="controversial_posts">Controversial Posts</string>

    <string name="loading">Loading…</string>

    <string name="home">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="anonymous_user">Anonymous</string>
    <string name="add_account">Add an Account</string>
</resources>
